Publishing to gh-pages

--- a/Website/_config.yml
+++ b/Website/_config.yml
@@ -1,30 +1,27 @@
 # --- General options --- #
 
-# Name of website
-title: My website
-
-# Short description of your site
-description: A virtual proof that I'm awesome
-
-# --- Local development options ---
-# If your website is hosted locally rather than on GitHub, then you need to uncomment the next two parameters to set the url and baseurl
-# *** If you're not sure what this mean, then leave this section as it is. Only modify the url and baseurl if you know what you're doing!***
-
 # url is the the website domain URL without a trailing slash
-#url: "https://example.com"
+# url: "https://example.com"
 
 # baseurl should be an empty string
-#baseurl: ""
+# baseurl: ""
 
 # --- Navigation bar options --- #
 
+# Name of website
+title: SCCM Zone
+
+# Short description of your site
+description: We publish awsome SCCM, SSRS and Powershell related content.
+
 # List of links in the navigation bar
 navbar-links:
-  About Me: "aboutme"
-  Resources:
-    - Beautiful Jekyll: "http://deanattali.com/beautiful-jekyll/"
-    - Learn markdown: "http://www.markdowntutorial.com/"
-  Author's home: "http://deanattali.com"
+  About Us: "aboutus"
+  Blog:
+    - Search: "#search"
+    - Posts: "#posts"
+    - Tags: "#tags"
+  Sitemap: "#sitemap"
 
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
@@ -32,7 +29,7 @@ avatar: "/img/avatar-icon.png"
 
 # If you want to have an image logo in the top-left corner instead of the title text,
 # then specify the following parameter
-# title-img: /path/to/image
+# title-img: "/img/avatar-icon.png"
 
 # --- Background colour/image options --- #
 
@@ -60,7 +57,7 @@ footer-link-col: "#404040"
 # Change all these values or delete the ones you don't want.
 # Important: you must keep the "name" parameter, everything else you can remove
 author:
-  name: Some Person
+  name: Ⓒ All Rights Reserved Ioan Popovici
 
 # Select your active Social Network Links.
 # Uncomment the links you want to show in the footer and add your information to each link.
@@ -68,12 +65,11 @@ author:
 # If you want to add a new link that isn't here, you'll need to also edit the file _data/SocialNetworks.yml
 social-network-links:
   rss: true
-  email: "someone@example.com"
-  facebook: deanattali
-  github: daattali
-  twitter: daattali
-#  reddit: yourname
-#  linkedin: daattali
+  email: "hello@sccm-zone.com"
+  github: SCCM-Zone
+  twitter: ioanpopovici
+  reddit: ioan_popovici
+  linkedin: ioanpopovici
 #  xing: yourname
 #  stackoverflow: "3943160/daattali"
 #  snapchat: deanat78
@@ -88,12 +84,12 @@ social-network-links:
 # Select which share links to show in posts
 share-links-active:
   twitter: true
-  facebook: true
+  facebook: false
   linkedin: true
 
 # How to display the link to the website in the footer
 # Remove this if you don't want a link in the footer
-url-pretty: "MyWebsite.com"  # eg. "deanattali.com/beautiful-jekyll"
+url-pretty: "SCCM-Zone.com"  # eg. "deanattali.com/beautiful-jekyll"
 
 # --- Web Statistics Section --- #
 
@@ -156,14 +152,15 @@ date_format: "%B %-d, %Y"
 # --- Don't need to touch anything below here (but you can if you want) --- #
 
 # Output options (more information on Jekyll's site)
-timezone: "America/Vancouver"
+timezone: "Europe/Bucharest"
 markdown: kramdown
 highlighter: rouge
 permalink: /:year-:month-:day-:title/
-paginate: 5
+paginate: 15
 
 kramdown:
   input: GFM
+  hard_wrap: true
 
 # Default YAML values (more information on Jekyll's site)
 defaults:
